wip storing artists